fixed a few bugs...if user enters 'not ' it will not make api call..must enter a letter after 'not '...also, excluded/included ingredients arrays dont overlap the recipe array

--- a/components/css/main.css
+++ b/components/css/main.css
@@ -379,7 +379,7 @@ a.small {
 #recipe-list{
 
   height: 60%;
-  width: 50%%;
+  width: 40%%;
   background-color: #EEE8D5;
   -moz-border-radius: 0px;
   -webkit-border-radius: 20px 0px 0px 0px;
