--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -376,7 +376,7 @@ a.small {
 #recipe-list{
 
   height: 60%;
-  width: 50%%;
+  width: 40%%;
   background-color: #EEE8D5;
   border-radius: 20px;
   clear: both;
